css/csscurrent.css
/* :root {
  --light: #;
  --heading-color: #;
  --dark: #;
  --border-bottom: #; 
} */

/* Original below */
:root {
  --light: #a0c1d1;
  --heading-color: #232c33;
  --dark: #5a7d7c;
  --border-bottom: white;
}

/* :root {
  --light: #ffc23c;
  --heading-color: #31087b;
  --dark: #100720;
  --border-bottom: #FA2FB5; 
} */

/* below is okay */
/* :root {
  --light: #DFF6FF;
  --heading-color: #1363df;
  --dark: #06283D;
  --border-bottom: #47b5ff; 
} */

/* :root {
  --light: #fc9918;
  --heading-color: #F14a16;
  --dark: #370665;
  --border-bottom: #35589a; 
} */

/* :root {
  --light: #4dd599;
  --heading-color: #ffdc34;
  --heading-color: #00918e;
  --dark: #110133;
  --border-bottom: #00918e;
  --heading-text-color: #ffdc34; 
} */

* {
  box-sizing: border-box;
}

body {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  background-color: var(--light);
  margin: 0;
}

/* Link Styling */

a:link {
  color: yellow;
}

a:visited {
  color: initial;
}

a:hover {
  color: black;
}

/* header styling */

header {
  /* set the flex-direction to row until browser gets smaller than 768px in media query at the bottom */
  min-width: 100%;
  display: inline-flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  box-shadow: 5px 10px 10px var(--light);
  background-color: var(--heading-color);
  align-content: baseline;
  margin: 0px;
  padding: 0px;
  border: 0px;
}

h1 {
  flex: 1 3;
  flex-basis: 25%;
  color: var(--heading-text-color);
  padding: 10px;
}

#dev-portfolio-label {
  background-color: var(--border-bottom);
  padding: 1%;
  border-bottom: 5px solid;
  border-bottom-style: dashed;
  margin: 0;
  text-align: center;
  line-height: normal;
}


/* nav styling */
/* adjust width here to affect the background of the navbar */
.nav {
  /* two below make the nav contents into a row */
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  list-style-type: none;
  font-size: 20px;
  text-align: center;
  background-color: var(--heading-color);
  font-weight: bolder;
}

/* adjust width affects whole box for link here */
.nav li {
  flex-shrink: 1;
  flex-grow: 1;
  flex-basis: 200px;
  padding: 10px;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

nav ul li a {
  flex: 1 1 40%;
  text-align: center;
  text-decoration: none;
  color: var(--heading-text-color);
  /* width does nothing of value here currently */
}

/* Interact with Nav */

.nav li:active {
  box-shadow: inset 5px 5px 15px gold;
}

/* Main Portion of Site */

main {
  margin: 0px;
  border-top: 10px solid var(--dark);
  border-bottom: 10px solid var(--dark);
}

.sectionLabels {
  display: block;
  border-bottom: 5px solid var(--border-bottom);
  border-top: 5px solid var(--border-bottom);
  line-height: 40px;
  margin: 0px;
  color: var(--heading-text-color);
  padding: 10px 10px 10px 45px;
  background-color: var(--heading-color);
  box-shadow: 5px 10px 10px var(--light);
}

/* About Me Content Styling */

.about-container {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: safe;
  align-items: center;
  background-color: var(--heading-color);
  box-shadow: 5px 10px 10px var(--light);
  padding: 10px 10px;
  font-size: 1em;
  min-width: none;
}

article img {
  margin-left: 10%;
  flex-shrink: 1;
  /* min-width: none;
 min-height: none; */
}

article p {
  flex-grow: 1;
  flex-shrink: 1;
  margin-left: 50px;
  margin-right: 20%;
  padding: 10px;
  filter: drop-shadow(4px 4px 5px gray);
  border: 5px var(--heading-color);
  color: blanchedalmond;
  background-color: var(--heading-color);
}

.self-wrapper {
  display: flex;
  justify-self: center;
  margin-right: 5%;
}

.self-wrapper img {
  flex: 2 0 200px;
}

/* First Project App */

.firstProject-contents {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 0px;
  position: relative;
  margin-bottom: 0;
}

.firstProject-contents a {
  display: flex;
  margin: 10px;
  /* border does not work */
  justify-content: center;
  align-items: center;
  position: relative;
}

.firstProject-contents a img {
  border: 5px solid var(--dark);
  flex-grow: 0;
  flex-basis: 20%;
  padding: 0px;
  max-width: 100%;
}

/* Blockquote Styling throughout below */

/* optained from css-tricks.com */
blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}

/* Small Project Cards "Notable Mentions"*/

#smallpros-heading {
  background-color: #232c33;
  margin: 0px;
  color: yellow;
  display: block;
  border-bottom: 5px solid var(--border-bottom);
  line-height: 40px;
  margin: 0px;
  color: yellow;
  padding: 10px 10px 10px 65px;
}

.smallprojectlabel {
  display: flex;
  background-color: var(--border-bottom);
  padding: 1%;
  border-bottom: 5px solid;
  border-bottom-style: dashed;
  overflow-wrap: break-word;
  margin: 0;
  line-height: normal;
  font-size: 16px;
  text-anchor: middle;
}

.smallprojectlabel h3 {
  /* max-width: inherit; */
  flex: 1 5 0;
}

.smallcards {
  padding: 0px;
}

.smallcards ul {
  list-style-type: none;
  margin: 0px;
  padding: 3%;
  line-height: 5em;
  border-top: 20px solid var(--dark);
  border-bottom: 20px solid var(--dark);
  border-right: 100px solid var(--dark);
  border-left: 100px solid var(--dark);
  /* flex start */
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.smallcards ul li {
  display: flex;
  flex-shrink: 1;
  flex-grow: 0;
  /* min-width: 25%; */
  /* messes with responsive for large screens consider media query */
  margin: 2%;
  border-top: 5px solid #232c33;
  border-bottom-color: var(--dark);
  position: relative;
}

.smallcards ul li a {
  display: flex;
  flex-wrap: wrap;
  /* flex-shrink: inherit; */
}

.smallcards ul li a img {
  border-bottom: 5px solid;
  /* max-width: 55%; */
}

.pro-label-wrapper {
  display: none;
  position: absolute;
  top: 0.09%;
  line-height: normal;
  text-align: center;
}

.smallcards li:hover .pro-label-wrapper {
  display: block;
  /* z-index: 1; */
  line-height: normal;
  text-align: center;
}

/* footer - contact info */

.contact-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  list-style: none;
  font-size: medium;
  padding: 10px;
  margin: 0;
}

#contact {
  display: block;
  border: 5px solid white;
  height: 40px;
  margin: 18px;
  color: yellow;
  background-color: var(--heading-color);
  box-shadow: 5px 10px 10px var(--light);
}

/* Media Queries */
@media screen and (max-width: 1441px) {
  .about-container {
    font-size: 1.5em;
    justify-content: center;
  }
}

@media screen and (max-width: 1025px) {
  article p {
    margin: 10px;
  }

  .smallcards ul {
    /* flex-wrap: nowrap; */

    padding: 0%;
  }
}

@media screen and (max-width: 769px) {
  .about-container {
    font-size: 1.35em;
  }

  .smallcards ul {
    border-top: 5px solid var(--dark);
    border-bottom: 5px solid var(--dark);
    border-right: 0px;
    border-left: 0px;
  }
}

@media screen and (max-width: 426px) {
  h1 {
    padding-left: 30px;
  }

  .nav {
    flex-wrap: wrap;
  }

  article img {
    max-width: 35vh;
  }

  .about-container {
    flex-direction: column;
    font-size: 14px;
    flex-wrap: wrap;
  }
}

@media screen and (max-width: 376px) {
  .nav {
    position: relative;
    right: 10px;
  }

  article p {
    margin-left: 0;
    margin-right: 0;
  }

  .smallcards ul li {
    flex-shrink: 5;
    flex-grow: 0;
    padding: 0;
    margin-right: 50%;
    margin-left: 50%;
    border: 0px;
  }

  .contact-content {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    right: 8%;
  }
}

/* testing area */

